--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "cron-ts",
+  "name": "cron-toolkit-ts",
   "version": "0.1.0",
   "description": "Type-safe Toolkit to get cron expressions for JavaScript and TypeScript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "start": "nodemon src/index.ts",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "build": "tsc",
@@ -24,7 +23,12 @@
     "readme.md"
   ],
   "author": "Omar Khairy",
-  "license": "ISC",
+  "homepage": "https://github.com/omarkhairy21/cron-ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/omarkhairy21/cron-ts.git"
+  },
+  "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.4.4",
     "jest": "^29.5.0",
