--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm ci
-      - run: npm test
-      - run: npm test:coverage
-  
+      - run: npm install -g yarn
+      - run: yarn install
+      - run: yarn test
+      - run: yarn test:coverage
